# blart

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  help.html  index.html  release.toml  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: mutants.toml
.github/workflows/: documentation.yml  rust-ci.yml
analysis/: Cargo.toml
analysis/src/: datasets.rs  key_analysis.rs  lib.rs
benches/: bulk_insert.rs  clone.rs  common.rs  criterion.rs  dict_get.rs  dict_insert.rs  entry.rs  fixed_header.rs  fuzzy.rs  generated_get.rs  generated_insert.rs  get_fuzzy.rs  iai_callgrind.rs  iter.rs  map_apis.rs  match_prefix.rs  min_max.rs  minmax.rs  node_min.rs  raw_apis.rs  search.rs
benches/data/: medium-dict.txt
benches/node/: match_prefix.rs  min_max.rs  mod.rs
benches/tree/: clone.rs  dict_get.rs  dict_insert.rs  entry.rs  fuzzy.rs  generated_get.rs  generated_insert.rs  iter.rs  mod.rs
blart/: all.html  constant.NUM_PREFIX_BYTES.html  enum.ConcreteInnerNodePtr.html  enum.ConcreteNode.html  enum.ConcreteNodePtr.html  enum.InnerNodeIter.html  enum.InsertError.html  enum.InsertSearchResultType.html  enum.MatchPrefixResult.html  enum.NodeType.html  enum.TreeIterator.html  fn.deallocate_tree.html  fn.delete_maximum_unchecked.html  fn.delete_minimum_unchecked.html  fn.delete_unchecked.html  fn.insert_unchecked.html  fn.maximum_unchecked.html  fn.minimum_unchecked.html  fn.search_for_insert_point.html  fn.search_unchecked.html  index.html  sidebar-items.js  struct.AttemptOptimisticPrefixMatch.html  struct.Concat.html  struct.ConcatTuple.html  struct.DeleteResult.html  struct.ExplicitMismatch.html  struct.Header.html  struct.Identity.html  struct.InnerNode256.html  struct.InnerNode256Iter.html  struct.InnerNode48.html  struct.InnerNode48Iter.html  struct.InnerNodeCompressed.html  struct.InnerNodeCompressedIter.html  struct.InnerNodeTreeIterator.html  struct.InsertPrefixError.html  struct.InsertResult.html  struct.InsertSearchResult.html  struct.LeafNode.html  (+26 more)
blart/alloc/: index.html  struct.Global.html  trait.Allocator.html
blart/allocator/: index.html  sidebar-items.js  struct.Global.html  trait.Allocator.html
blart/bytes/: index.html  macro.as_bytes_for_integer_arrays!.html  macro.as_bytes_for_integer_arrays.html  macro.as_bytes_for_integer_like_types!.html  macro.as_bytes_for_integer_like_types.html  sidebar-items.js  trait.AsBytes.html  trait.NoPrefixesBytes.html  trait.OrderedBytes.html
blart/collections/: index.html  sidebar-items.js
blart/map/: constant.DEFAULT_PREFIX_LEN.html  enum.Entry.html  enum.EntryRef.html  enum.PrefixEntry.html  enum.PrefixOccupied.html  index.html  sidebar-items.js  (+32 more)
blart_analysis/: all.html  index.html  sidebar-items.js
examples/: count_words.rs  tree_stats.rs  tree_to_dot.rs  tree_viz.rs
fuzz/: Cargo.toml
scripts/: bench-against.sh  cov.sh  full-test.sh  prep_documentation.sh  resolve-toolchain-version.sh  run-fuzzer  serve-cov.sh
search.index/: 004a8f7ee5.js  00903facfc.js  0137eb1371.js  0196c89e61.js  021acaa134.js  0268494781.js  037f53e879.js  03e7f57300.js  04410bf530.js  04818eb4a2.js  053199af67.js  07636ea900.js  07863ec6e0.js  09976d92e5.js  09b0e2ad5f.js  0a6d194e24.js  0cda573c68.js  0d890981e6.js  0e07779fc0.js  0e69ac7b0b.js  0f36250a1e.js  10976c1d4f.js  10b7bd83b5.js  1135c313a1.js  119d88cf07.js  11e0b5b1b0.js  131b794ffb.js  1361a0ee41.js  136a6739d2.js  139ddb1e04.js  13bc6af727.js  13f571c2bc.js  142be79bbb.js  149f281afa.js  150651e514.js  15880e0dd2.js  1599cb135b.js  16def00a86.js  181e1b34f6.js  18ae9be3e8.js  (+163 more)
sosd_node_width_dist/: all.html  fn.main.html  index.html  struct.Args.html
src/: alloc.rs  allocator.rs  benches_common.rs  bytes.rs  collections.rs  lib.rs  nightly_rust_apis.rs  nodes.rs  rust_nightly_apis.rs  tagged_pointer.rs  testing.rs  tests_common.rs
tests/: memory_usage.rs  memory_usage_fixed_length_dense.rs  memory_usage_large_prefixes.rs  memory_usage_skewed.rs
(+867 files in other folders)
