# cargo-features = ["profile-rustflags"]

[package]
name = "blart"
version = "0.3.0"
description = "An implementation of an adaptive radix tree packaged as a BTreeMap replacement"
repository = "https://github.com/declanvk/blart"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tree", "map", "collection", "radix-tree"]
categories = ["data-structures"]
rust-version = "1.78"

exclude = [
    "fuzz/",
    "scripts/",
    "rustfmt.toml",
    "examples/example-data/",
    ".github/",
    "benches/data/",
    "release.toml",
]

# All benchmarks must be registered manually
autobenches = false

[dependencies]
allocator-api2 = { version = "0.2.20", optional = true }
bytemuck = { version = "1.16.1", features = ["min_const_generics"] }
paste = "1.0.15"

[features]
nightly = []
bench-perf-events = []
allocator-api2 = ["dep:allocator-api2"]

[dev-dependencies]
argh = "0.1.12"
criterion = "0.5.1"
dhat = "0.3.3"
rand = "0.8.5"
iai-callgrind = "0.13.4"
zipf = "7.0.1"
bumpalo = { version = "3.16.0", features = ["allocator-api2"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai_callgrind"
harness = false

[profile.bench]
debug = true
